<resources>
    <string name="app_name">ExamenMovilC1</string>

        <string name="user">admin</string>
        <string name="pass">1234</string>
        <string name="banco">Ingrese el banco</string>
        <string name="domicilio">av del sol 34</string>
        <string name="ingresar">Ingresar</string>
        <string name="regresar">Regresar</string>
        <string name="movimientos">Movimientos</string>
        <string-array name="movimientos_array">
            <item>Consultar</item>
            <item>Retirar</item>
            <item>Depositar</item>
        </string-array>


    <string name="usuario_conectado">Usuario: %1$s</string>
    <string name="msg_faltan_datos">Faltan datos de cuenta</string>
    <string name="msg_cuenta_registrada">Cuenta registrada correctamente</string>
    <string name="msg_registra_cuenta">Primero registra la cuenta</string>
    <string name="msg_captura_cantidad">Captura la cantidad</string>
    <string name="msg_mayor_cero">La cantidad debe ser mayor a 0</string>
    <string name="msg_deposito_exito">Depósito realizado correctamente</string>
    <string name="msg_saldo_insuficiente">Saldo insuficiente para el retiro</string>
    <string name="msg_retiro_exito">Retiro realizado correctamente</string>
    <string name="msg_saldo_actual">Saldo actual: $%1$s</string>
    <string name="msg_selecciona_movimiento">Selecciona un tipo de movimiento</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="n_mero_de_cuenta">Número de Cuenta</string>
    <string name="nombre_cliente">Nombre Cliente</string>
    <string name="saldo">Saldo</string>
    <string name="deposito">Deposito</string>
    <string name="retiro">Retiro</string>

</resources>