<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CuentaBancoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/lblNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Usuario:"
            android:textSize="20sp"
            android:gravity="center"
            android:paddingBottom="16dp" />

        <EditText
            android:id="@+id/txtNumCuenta"
            android:autofillHints="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/n_mero_de_cuenta" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="20dp"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="15sp"
            android:hint="@string/nombre_cliente" />

        <EditText
            android:id="@+id/txtBanco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/banco" />

        <EditText
            android:id="@+id/txtSaldo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/saldo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movimientos"
            android:paddingTop="16dp"
            android:textSize="18sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <RadioButton
                android:id="@+id/rdbDeposito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deposito" />

            <RadioButton
                android:id="@+id/rdbRetiro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retiro" />

            <RadioButton
                android:id="@+id/rdbConsulta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Consultar Saldo" />
        </RadioGroup>

        <TextView
            android:id="@+id/txtSaldoActual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Saldo actual: $0.00"
            android:textSize="20sp"
            android:gravity="center"
            android:padding="8dp" />


        <EditText
            android:id="@+id/txtCantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Cantidad :" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingTop="16dp">

            <Button
                android:id="@+id/btnRegistrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Registrar Cuenta" />

            <Button
                android:id="@+id/btnAplicar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Aplicar Movimiento"
                android:layout_marginStart="10dp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
